[gd_scene load_steps=7 format=3 uid="uid://p4hc13wmrmsk"]

[ext_resource type="Script" uid="uid://c0rswtf0gc4ue" path="res://scripts/guard.gd" id="1_m4fl1"]
[ext_resource type="PackedScene" uid="uid://cko2xbxr5j553" path="res://scenes/vision_cone.tscn" id="2_ci2qi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2hhgp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_m4fl1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ci2qi"]
albedo_color = Color(0.11263574, 0.25456724, 0.7680694, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_k0dx2"]
height = 1.9
radius = 1.0

[node name="Guard" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_m4fl1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_2hhgp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_m4fl1")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_ci2qi")

[node name="VisionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ViewRange" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("CylinderShape3D_k0dx2")

[node name="VisionCone" parent="VisionArea" instance=ExtResource("2_ci2qi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.95, 0)

[node name="RayCast3D" type="RayCast3D" parent="."]
collision_mask = 3
hit_back_faces = false

[node name="SpotIndicator" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1818843, 0)
font_size = 50

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
